--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Manuel Munz <manu@somakoma.de>
 Build-Depends: debhelper (>= 8.0.0), python (>= 2.5.4-1~)
-Build-Depends-Indep: python-central (>= 0.5.6)
+Build-Depends-Indep: dh-python
 XS-Python-Version: current, >= 2.4
 Standards-Version: 3.9.2
 #Homepage: 
@@ -13,7 +13,7 @@ Standards-Version: 3.9.2
 Package: fail2ban-p2p
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-m2crypto, python-argparse, adduser
-XB-Python-Version: ${python:Versions}
+XS-Python-Version: ${python:Versions}
 Description: Distribute attacker information from fail2ban via a p2p network
  Fail2ban-p2p can be used to distribute information about atackers in a
  p2p/f2f network to ban these attackers on all hosts.
