--- a/debian/rules
+++ b/debian/rules
@@ -50,7 +50,7 @@ binary-indep: install
 	#dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installlogrotate
-	dh_pycentral
+	dh_python2
 	dh_installinit -- defaults 99
 	#dh_installman man/*.1
 	dh_link
