--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: fail2ban-p2p
 Section: net
 Priority: optional
 Maintainer: Manuel Munz <manu@somakoma.de>
-Build-Depends: debhelper (>= 8.0.0), python (>= 2.5.4-1~)
+Build-Depends: debhelper (>= 8.0.0)
 Build-Depends-Indep: dh-python
 XS-Python-Version: current, >= 2.4
 Standards-Version: 3.9.2
