--- a/debian/rules
+++ b/debian/rules
@@ -1,65 +1,13 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+# You must remove unused comment lines for the released package.
+#export DH_VERBOSE = 1
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
+export PYBUILD_NAME=fail2ban-p2p
 DESTDIR=$(CURDIR)/debian/fail2ban-p2p
 
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	touch configure-stamp
+%:
+    dh $@ --with python3 --buildsystem=pybuild --root=$(DESTDIR) --no-compile --install-layout=deb
 
-build:
-
-clean: clean-inits
-	dh_testdir
-	dh_testroot
-	rm -f  build-stamp configure-stamp
-	rm -rf build
-	# Does not hurt to ask distutils to do their duty
-	python setup.py clean
-	# Enforce removal of *.pyc files. Apparently dh_clean does
-	# not perform find on provided filename patterns.
-	find . -name \*.pyc -exec rm -f {} \;
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	# Install the package into debian/fail2ban-p2p.
-	python setup.py install --root=$(DESTDIR) --no-compile --install-layout=deb
-
-#
-# Just to comply with policy 4.8
-binary-arch:
-
-# Build architecture-independent files here.
-binary-indep: install
-	dh_testdir
-	dh_testroot
-	#dh_installchangelogs ChangeLog
-	dh_installdocs
-	dh_installlogrotate
-	dh_python2
-	dh_installinit -- defaults 99
-	#dh_installman man/*.1
-	dh_link
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep
-.PHONY: build clean binary-indep binary-arch binary install configure copy-inits clean-inits
+override_dh_auto_test:
+    echo "Not running tests - upstream tarball doesn't provide any."
+    
