--- a/debian/rules
+++ b/debian/rules
@@ -1,13 +1,65 @@
 #!/usr/bin/make -f
-# You must remove unused comment lines for the released package.
-#export DH_VERBOSE = 1
+# -*- makefile -*-
+# Sample debian/rules that uses debhelper.
+# This file was originally written by Joey Hess and Craig Small.
+# As a special exception, when this file is copied by dh-make into a
+# dh-make output file, you may use that output file without restriction.
+# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-export PYBUILD_NAME=fail2ban-p2p
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
 DESTDIR=$(CURDIR)/debian/fail2ban-p2p
 
-%:
-    dh $@ --with python3 --buildsystem=pybuild --root=$(DESTDIR) --no-compile --install-layout=deb
 
+%:
+	dh $@ --with python2
+
+# Override auto test because upstream do not use the standard unittest discover
 override_dh_auto_test:
-    echo "Not running tests - upstream tarball doesn't provide any."
-    
+
+# Override of auto_build
+override_dh_auto_build:
+
+# Override of auto_install to remove information from package
+override_dh_auto_install:
+	#dh_auto_install
+	python setup.py install --root=$(DESTDIR) --no-compile --install-layout=deb
+
+
+clean: clean-inits
+	dh_testdir
+	dh_testroot
+	rm -f  build-stamp configure-stamp
+	rm -rf build
+	# Does not hurt to ask distutils to do their duty
+	python setup.py clean
+	# Enforce removal of *.pyc files. Apparently dh_clean does
+	# not perform find on provided filename patterns.
+	find . -name \*.pyc -exec rm -f {} \;
+	dh_clean
+
+#
+# Just to comply with policy 4.8
+binary-arch:
+
+# Build architecture-independent files here.
+binary-indep: install
+	dh_testdir
+	dh_testroot
+	#dh_installchangelogs ChangeLog
+	dh_installdocs
+	dh_installlogrotate
+	dh_python2
+	dh_installinit -- defaults 99
+	#dh_installman man/*.1
+	dh_link
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+binary: binary-indep
+.PHONY: build clean binary-indep binary-arch binary install configure copy-inits clean-inits
