--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Manuel Munz <manu@somakoma.de>
 Build-Depends: debhelper (>= 8.0.0)
 Build-Depends-Indep: dh-python
-XS-Python-Version: current, >= 2.4
+XS-Python-Version: current, >= 3.2
 Standards-Version: 3.9.2
 #Homepage: 
 #Vcs-Git: git://git.debian.org/collab-maint/fail2ban-p2p.git
@@ -12,7 +12,7 @@ Standards-Version: 3.9.2
 
 Package: fail2ban-p2p
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-m2crypto, python-argparse, adduser
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, python3-m2crypto, adduser
 XS-Python-Version: ${python:Versions}
 Description: Distribute attacker information from fail2ban via a p2p network
  Fail2ban-p2p can be used to distribute information about atackers in a
