--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [install]
-install-purelib=/usr/share/fail2ban-p2p
+install_purelib = /usr/share/fail2ban-p2p
 
 [sdist]
-formats=bztar
+formats = bztar
